# court-finder

./: .gitignore  README.md  cli.py  debug_detection.py  find_nearest.py  pyproject.toml
src/: __init__.py  cache.py  court_filter.py  geo_utils.py  naip_fetcher.py  nms.py  pipeline.py  segmentation.py  tiling.py
