[project]
name = "court-finder"
version = "0.1.0"
description = "Tennis court detection from NAIP aerial imagery using SAM 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "pgeocode>=0.4",
    "opencv-python>=4.8",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
court-finder = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
